--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@vanilla-extract/css": "^1.16.1",
     "@vanilla-extract/recipes": "^0.5.5",
     "@vanilla-extract/sprinkles": "^1.6.3",
+    "lucide-react": "^0.469.0",
     "next": "15.0.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
