--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@vanilla-extract/sprinkles": "^1.6.3",
     "lucide-react": "^0.469.0",
     "next": "15.0.3",
+    "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
