--- a/package.json
+++ b/package.json
@@ -16,18 +16,18 @@
     "@vanilla-extract/recipes": "^0.5.5",
     "@vanilla-extract/sprinkles": "^1.6.3",
     "lucide-react": "^0.469.0",
-    "next": "15.0.3",
+    "next": "15.1.3",
     "next-themes": "^0.4.4",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react": "19.0.0",
+    "react-dom": "19.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "19.0.2",
+    "@types/react-dom": "19.0.2",
     "@vanilla-extract/next-plugin": "^2.4.7",
     "eslint": "^8",
-    "eslint-config-next": "15.0.3",
+    "eslint-config-next": "15.1.3",
     "eslint-config-prettier": "^9.1.0",
     "prettier": "3.3.3",
     "typescript": "^5"
